@@ -1,10 +1,9 @@
-// Copyright (c) 2017, 2022, Oracle and/or its affiliates.
+// Copyright (c) 2017, 2023, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.steps;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 
 import io.kubernetes.client.openapi.models.V1PodDisruptionBudgetList;
@@ -50,7 +49,7 @@ public class DeleteDomainStep extends Step {
     return info.getServerPods()
         .map(PodHelper::getPodServerName)
         .map(this::createShutdownInfo)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   private DomainPresenceInfo.ServerShutdownInfo createShutdownInfo(String serverName) {
