@@ -1,4 +1,4 @@
-// Copyright (c) 2021, 2022, Oracle and/or its affiliates.
+// Copyright (c) 2021, 2023, Oracle and/or its affiliates.
 // Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 package oracle.kubernetes.operator.steps;
@@ -12,7 +12,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import javax.annotation.Nonnull;
 
 import io.kubernetes.client.openapi.models.V1Pod;
@@ -75,7 +74,7 @@ public class MonitoringExporterSteps {
         return getAllServerNames(packet).stream()
               .filter(name -> hasExporterConfiguration(packet, name))
               .filter(name -> hasExporterSidecar(packet, name))
-              .collect(Collectors.toList());
+              .toList();
       }
 
       private Collection<String> getAllServerNames(Packet packet) {
@@ -348,6 +347,7 @@ public class MonitoringExporterSteps {
     }
 
     @Override
+    @SuppressWarnings("try")
     public NextAction apply(Packet packet) {
       if (serverNames == null) {
         return doNext(packet);
